# scrawl

./: .gitignore  README.md
backend/: README.md  makefile  pyproject.toml
backend/backend/: __init__.py  __main__.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  main.ts  routes.ts  shims.d.ts
frontend/src/components/: Button.vue  DarkMode.vue
frontend/src/logic/: auth.ts
frontend/src/modules/: store.ts
frontend/src/pages/: App.vue  Home.vue  index.vue
frontend/src/pages/Login/: Login.vue  index.vue
frontend/src/styles/: main.css
