[tool.poetry]
name = "backend"
version = "0.1.0"
description = "backend for web text editor"
authors = ["Who23 <contactwho23@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
google-auth = "^1.28.1"
google-auth-oauthlib = "^0.4.4"
Flask = "^1.1.2"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
